# metrique

./: .gitallowed  .gitignore  AGENTS.md  AGGREGATION_DESIGN.md  AGG_DESIGN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  aggregated_field_prototype.rs  debug_unit.rs  libtest_readme_example.rlib  release-plz.toml  test_merge
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_emf.rs  fuzz_entry.rs  fuzz_json.rs
metrique/: Cargo.toml  README.md
metrique-aggregation/: AGENTS.md  CHANGING_TO_CLOSE_AGGREGATE.md  Cargo.toml  MERGE_REF_PLAN.md  README.md
metrique-aggregation/benches/: aggregation.rs
metrique-aggregation/examples/: embedded.rs  histogram.rs  histogram_aggregation.rs  local-webserver.rs  sink_level.rs  split.rs
metrique-aggregation/src/: aggregate.rs  aggregator.rs  counter.rs  dimension_probe.rs  histogram.rs  key.rs  keyed_sink.rs  lib.rs  sink.rs  split_sink.rs  traits.rs  value.rs
metrique-aggregation/src/sink/: mutex.rs  worker.rs
metrique-aggregation/tests/: aggregation.rs  descriptor.rs  dimensions_as_key.rs  flatten_strategy.rs  histogram.rs  inline_aggregation.rs  integration.rs  keyed_aggregator_with_config.rs  keyed_sink.rs  local_format.rs  macro_aggregation.rs  manual_aggregation.rs  manual_aggregation_new.rs  merge_on_drop_keyed.rs  minimal.rs  split_sink.rs  ui.rs
metrique-aggregation/tests/snapshots/: local_format__snapshot_compact_json.snap  local_format__snapshot_json.snap  local_format__snapshot_markdown.snap  local_format__snapshot_pretty.snap
metrique-core/: Cargo.toml  README.md
metrique-core/src/: aggregated.rs  atomics.rs  close_value_impls.rs  concat.rs  inflectable_entry_impls.rs  lib.rs  namestyle.rs  witness.rs
metrique-macro/: Cargo.toml  README.md
metrique-macro/src/: aggregate.rs  derive_utils.rs  emf.rs  entry_impl.rs  enums.rs  inflect.rs  lib.rs  structs.rs  value_impl.rs
metrique-macro/src/entry_impl/: enum_impl.rs  struct_impl.rs
metrique-macro/src/snapshots/: metrique_macro__aggregate__tests__aggregate_direct_mode.snap  metrique_macro__aggregate__tests__aggregate_entry_mode.snap  metrique_macro__aggregate__tests__aggregate_generates_struct.snap  metrique_macro__aggregate__tests__aggregate_generates_struct.snap.new  metrique_macro__aggregate__tests__aggregate_strips_attributes.snap  metrique_macro__aggregate__tests__aggregate_with_dimensions.snap  metrique_macro__aggregate__tests__aggregate_with_ignore.snap  metrique_macro__tests__aggregate_entry_mode.snap  (+29 more)
metrique-metricsrs/: Cargo.toml  README.md
metrique-metricsrs/src/: accumulator.rs  capture.rs  generic.rs  lambda_reporter.rs  lib.rs  metrics_histogram.rs  reporter.rs  unit.rs
metrique-service-metrics/: Cargo.toml  README.md
metrique-service-metrics/src/: lib.rs
metrique-timesource/: Cargo.toml  README.md
metrique-timesource/src/: fakes.rs  lib.rs
metrique-util/: Cargo.toml  README.md
metrique-util/examples/: individual-task-metrics.rs  sysinfo-folded-static.rs  sysinfo-folded.rs  tokio-metrics-folded.rs
metrique-util/src/: .#sysinfo_reporter.rs  dynamic_inflection.rs  future_metrics.rs  individual_task_metrics.rs  lib.rs  state.rs  sysinfo_reporter.rs  tokio_metrics_reporter.rs
metrique-util/tests/: state.rs
metrique-writer/: Cargo.toml  README.md
metrique-writer-cloudwatch/: Cargo.toml  README.md
metrique-writer-cloudwatch/src/: lib.rs
metrique-writer-core/: Cargo.toml  README.md
metrique-writer-core/examples/: runtime_test_sink.rs
metrique-writer-core/src/: config.rs  descriptor.rs  format.rs  global.rs  lib.rs  merge.rs  sample.rs  sink.rs  stream.rs  test_stream.rs  unit.rs  validate.rs
metrique-writer-format-emf/: Cargo.toml  README.md
metrique-writer-format-emf/src/: buf.rs  emf.rs  json_string.rs  lib.rs  rate_limit.rs
metrique-writer-format-emf/tests/: dimensions.rs  emf_limits.rs  lambda_reporter.rs  lambda_reporter_global_sink.rs  lambda_reporter_util.rs  large_entry.rs  misc.rs  sample.rs
metrique-writer-format-emf/tools/: put-logs.py
metrique-writer-format-json/: Cargo.toml  README.md
metrique-writer-format-json/src/: json.rs  lib.rs
metrique-writer-macro/: Cargo.toml  README.md
metrique-writer-macro/src/: lib.rs
metrique-writer/src/: format.rs  lib.rs  main.rs  rate_limit.rs  stream.rs  test_util.rs
metrique-writer/test/: test_test_util.rs
metrique-writer/tests/: test_test_util.rs
metrique/docs/: concurrency.md  cookbook.md  emf.md  extending.md  performance_and_comparisons.md  sampling.md  sinks.md  testing.md  usage_in_libraries.md
metrique/examples/: aggregated-field.rs  aggregation-generated.rs  aggregation-keyless.rs  aggregation-local-sink.rs  aggregation-manual.rs  aggregation-sink-comprehensive.rs  aggregation-sink-working.rs  aggregation-sink.rs  aggregation.rs  configuring-delay-flush-time.rs  debug-unit-regular.rs  emf.rs  enums.rs  extras.rs  flatten-with-prefix.rs  flex-dynamic-fields.rs  global-counter.rs  global-state.rs  handlers.rs  histogram.rs  in-memory-agg.rs  json.rs  library-provided-metric.rs  merging-keyless.rs  merging-manual.rs  multi-flex.rs  sysinfo-folded-static.rs  sysinfo-folded.rs  sysinfo.rs  testing-global-queues.rs  testing.rs  thread-local-testing.rs  timers.rs  tokio-metrics-folded-static.rs  tokio-metrics-folded.rs  tokio-metrics.rs  unit-of-work-fanout.rs  unit-of-work-owned-child-metrics.rs  unit-of-work-simple.rs  wrapper-with-dimensions-on-close.rs
metrique/src/: emf.rs  flex.rs  instrument.rs  json.rs  keep_alive.rs  lib.rs  local.rs  multi_flex.rs  namestyle.rs  slot.rs  timers.rs  witness.rs
metrique/tests/: arc-swap.rs  cargo-toml-format.rs  child-keeps-parent-alive.rs  debug-impls.rs  deny-missing-docs.rs  descriptor.rs  descriptor_sink.rs  doc-link-validation.rs  emf.rs  enum_attributes.rs  enum_basic.rs  enum_precedence.rs  enum_tag.rs  facu.rs  flags.rs  flatten-prefix.rs  flex.rs  instrument.rs  kitchen-sink.rs  lifetimes.rs  metrics-inside-macro-rules.rs  minimal.rs  multi-flex.rs  rename_is_transitive.rs  renames.rs  sample-group.rs  string-value.rs  timers.rs  ui.rs  visibility.rs  witness.rs
(+128 files in other folders)
