[package]
name = "metrique-aggregation"
version = "0.1.2"
edition = "2024"
rust-version = "1.89" # build.yml
license = "Apache-2.0"
description = "Library for working with unit of work metrics - aggregation"

[dependencies]
metrique = { path = "../metrique", version = "0.1"}
metrique-writer = { path = "../metrique-writer", version = "0.1.13" }
metrique-core = { path = "../metrique-core", version = "0.1.11" }
metrique-macro = { path = "../metrique-macro", version = "0.1.8"}
smallvec.workspace = true
histogram.workspace = true
ordered-float.workspace = true
metrique-writer-core = { version = "0.1.8", path = "../metrique-writer-core" }
tokio = { workspace = true, default-features = false, features = ["sync"] }
metrique-timesource = { version = "0.1.6", path = "../metrique-timesource", features = ["test-util"] }
hashbrown.workspace = true

[dev-dependencies]
metrique = { path = "../metrique", features = ["test-util", "emf"] }
divan = "0.1"
rand.workspace = true
rand_chacha.workspace = true
assert2.workspace = true
rstest.workspace = true
trybuild.workspace = true
rustversion.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "aggregation"
harness = false
