[package]
name = "metrique-aggregation"
version = "0.1.6"
edition = "2024"
rust-version = "1.89" # build.yml
license = "Apache-2.0"
description = "Library for working with unit of work metrics - aggregation"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique = { path = "../metrique", version = "0.1" }
metrique-writer = { path = "../metrique-writer", version = "0.1.17" }
metrique-core = { path = "../metrique-core", version = "0.1.15" }
metrique-macro = { path = "../metrique-macro", version = "0.1.13" }
smallvec.workspace = true
histogram.workspace = true
ordered-float.workspace = true
metrique-writer-core = { version = "0.1.12", path = "../metrique-writer-core" }
tokio = { workspace = true, default-features = false, features = ["sync"] }
metrique-timesource = { version = "0.1.7", path = "../metrique-timesource", features = ["test-util"] }
hashbrown.workspace = true

[dev-dependencies]
metrique = { path = "../metrique", features = ["test-util", "emf"] }
divan = "0.1"
rand.workspace = true
rand_chacha.workspace = true
assert2.workspace = true
rstest.workspace = true
trybuild.workspace = true
rustversion.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
# There seems to be a rustdoc bug where when a dev dependency enables a new feature, its not picked up properly
__build_examples_for_rustdoc = ["metrique/emf", "metrique/test-util"]

# We need to name one example so that our examples that use dev-dependencies get scraped
[[example]]
name = "embedded"
doc-scrape-examples = true
requires_features = ["__build_examples_for_rustdoc"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[bench]]
name = "aggregation"
harness = false
