[package]
name = "metrique-core"
version = "0.1.6"
edition = "2024"
rust-version = "1.87" # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Library for working with unit of work metrics - core traits"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.6" }
itertools = { workspace = true }

[dev-dependencies]
metrique = { path = "../metrique" }
metrique-writer = { path = "../metrique-writer" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
