[package]
name = "metrique-core"
version = "0.1.8"
edition = "2024"
rust-version = "1.89" # MSRV is 1.88 due to darling 0.23, 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts] [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Library for working with unit of work metrics - core traits"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.7" }
itertools = { workspace = true }

[dev-dependencies]
metrique = { path = "../metrique" }
metrique-writer = { path = "../metrique-writer" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
