[package]
name = "metrique-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11.4"
darling = "0.20.3"

[dev-dependencies]
insta = "1.36"
prettyplease = "0.2"
