[package]
name = "metrique-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
Inflector = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }
