[package]
name = "metrique-macro"
version = "0.1.5"
edition = "2024"
rust-version = "1.87" # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Library for working with unit of work metrics - #[metrics] macro"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
Inflector = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }
metrique = { path = "../metrique", features = ["test-util"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
