[package]
name = "metrique-service-metrics"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"                                                                 # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Library for working with unit of work metrics - writer-side interface"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique-writer = { path = "../metrique-writer", version = "0.1.3" }

[dev-dependencies]
metrique = { path = "../metrique", version = "0.1.3" }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf", version = "0.1.3" }
tracing-appender = { workspace = true }
