[package]
name = "metrique-service-metrics"
version = "0.1.9"
edition = "2024"
rust-version = "1.89"                                                                 # MSRV is 1.88 due to darling 0.23, 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts] [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Library for working with unit of work metrics - writer-side interface"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique-writer = { path = "../metrique-writer", version = "0.1.10" }

[dev-dependencies]

metrique = { path = "../metrique" }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf" }

tracing-appender = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
