[package]
name = "metrique-timesource"
version = "0.1.5"
edition = "2024"
rust-version = "1.89" # MSRV is 1.88 due to darling 0.23, 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts] [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Utilities for mocking Instant and SystemTime (part of metrique)"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[features]
custom-timesource = []
tokio = ["dep:tokio", "custom-timesource"]
test-util = ["custom-timesource"]
default = []

[dependencies]
tokio = { workspace = true, features = ["time"], optional = true }

[dev-dependencies]
metrique-timesource = { path = ".", features = ["custom-timesource", "tokio", "test-util"] }
tokio = { workspace = true, features = ["test-util", "full"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
