[package]
name = "metrique-util"
version = "0.1.2"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Additional utilities for metrique"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[features]
default = []
state = ["dep:arc-swap"]

[dependencies]
metrique-core = { path = "../metrique-core", version = "0.1.18" }
arc-swap = { version = "1", optional = true }

[dev-dependencies]
metrique = { path = "../metrique", features = ["emf", "test-util"] }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
metrique-writer-core = { path = "../metrique-writer-core", features = ["test-util"] }
tokio = { workspace = true, features = ["full", "test-util"] }
metrique-util = { path = ".", features = ["state"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
