[package]
name = "metrique-writer-cloudwatch"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
description = "A metrique EntryIoStream backend that submits EMF metrics to CloudWatch Logs via PutLogEvents"
readme = "README.md"
repository = "https://github.com/awslabs/metrique"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = ["tokio_runtime"]
tokio_runtime = ["tokio/rt"]

[dependencies]
metrique-writer-core = { workspace = true }
metrique-writer-format-emf = { workspace = true }
aws-sdk-cloudwatchlogs = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-smithy-types = "1"
tokio = { workspace = true, features = ["sync", "time"] }
tracing = "0.1"
bon = "3"

[dev-dependencies]
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-runtime-api = "1"
http = "1"
tokio = { workspace = true, features = ["full", "test-util"] }
metrique-writer-core = { workspace = true, features = ["test-util"] }
metrique-writer = { workspace = true }
tracing-test = "0.2"
futures = { workspace = true, features = ["executor"] }
