[package]
name = "metrique-writer-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.87" # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]

[dependencies]
smallvec = { workspace = true, features = ["union", "const_generics", "const_new"] }
itertools = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
metrique-writer = { path = "../metrique-writer", features = ["tracing_subscriber_03"] }
tracing-appender = { workspace = true }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf" }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
# Private utilities for testing the formatter crates. 100% unstable, do not use outside of this workspace
private-test-util = []