[package]
name = "metrique-writer-format-emf"
version = "0.1.0"
edition = "2024"
rust-version = "1.87" # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]

[dependencies]
bit-set = { workspace = true }
smallvec = { workspace = true, features = ["union", "const_generics", "const_new"] }
serde_json = { workspace = true }
dtoa = { workspace = true }
itoa = { workspace = true }
itertools = { workspace = true, default-features = true }
rand = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
metrique-writer-core = { path = "../metrique-writer-core" }
metrique-writer = { path = "../metrique-writer" }

[dev-dependencies]
assert-json-diff = { workspace = true }
assert_approx_eq = { workspace = true }
test-case = { workspace = true }
rand_chacha = { workspace = true }
metrique-writer-core = { path = "../metrique-writer-core", features = ["private-test-util"] }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
metrics = { workspace = true }