[package]
name = "metrique-writer-macro"
version = "0.1.0"
edition = "2024"
rust-version = "1.87" # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
str_inflector = { workspace = true }
synstructure = { workspace = true }
syn = { workspace = true }
