[package]
name = "metrique-writer-macro"
version = "0.1.4"
edition = "2024"
rust-version = "1.87" # MSRV is 1.87 due to `extend_from_within` [and 1.86 due to trait upcasts]
license = "Apache-2.0"
description = "Library for working with unit of work metrics - derive(Entry) macro"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
str_inflector = { workspace = true }
synstructure = { workspace = true }
syn = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
